--- a/MusicOrganizer/Views/Artists/Index.cshtml
+++ b/MusicOrganizer/Views/Artists/Index.cshtml
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Music Organizer</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   </head>
-  <body>
+  <body> -->
+
+  @{
+    Layout = "_Layout";
+  }
     @using MusicOrganizer.Models;
 
     <h1>Artists</h1>
@@ -18,10 +22,8 @@
     {
       @foreach (Artist artist in Model)
       {
-        <h3><a href='/artists/@artist.Id'>@artist.Name</a></h3>
+        <h3><a href='/artists/@artist.Id'>@artist.ArtistName</a></h3>
       }
     }
 
     <p><a href='/'>Back home</a></p>
-  </body>
-</html>
