--- a/MusicOrganizer/Views/Shared/_Layout.cshtml
+++ b/MusicOrganizer/Views/Shared/_Layout.cshtml
@@ -4,13 +4,10 @@
     <meta charset="utf-8">
     <title>Music Organizer</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/styles.css">
   </head>
   <body>
-    <form action="/artists/@Model.Id/records" method="post">
-      <input id="artistId" name="artistId" type="hidden" value="@Model.Id">
-      <label for="recordTitle">Record Title:</label>
-      <input id="recordTitle" name="recordTitle" type="text">
-      <button type='submit'>Add Record</button>
-    </form>
+    @RenderBody()
+    @await Html.PartialAsync("Footer")
   </body>
 </html>
