--- a/MusicOrganizer/Views/Home/Index.cshtml
+++ b/MusicOrganizer/Views/Home/Index.cshtml
@@ -9,5 +9,6 @@
     <h1>Music Organizer</h1>
     <h3><a href='/artists'>View artists</a></h3>
     <h3><a href='/artists/new'>Add a new artist</a></h3>
+    <p><img src='~/img/kanye.jpg'></p>
   </body>
 </html>
