--- a/MusicOrganizer/Views/Artists/New.cshtml
+++ b/MusicOrganizer/Views/Artists/New.cshtml
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Music Organizer</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  </head>
-  <body>
+@{
+    Layout = "_Layout";
+  }
     <h1>Add an artist</h1>
     <br>
     <p>Add an artist here: </p>
@@ -14,5 +9,3 @@
       <input id="artistName" name="artistName" type="text">
       <button type="submit" class="btn btn-light">Add</button>
     </form>
-  </body>
-</html>
