--- a/MusicOrganizer/Views/Artists/Show.cshtml
+++ b/MusicOrganizer/Views/Artists/Show.cshtml
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Music Organizer</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  </head>
-  <body>
+@{
+    Layout = "_Layout";
+  }
     @using MusicOrganizer.Models;
 
     <h3>Records by artist</h3>
@@ -20,5 +15,3 @@
     <p><a href='/artists/@Model["artist"].Id/records/new'>Add a new record</a></p>
     <p><a href='/artists'>Return to artist list</a></p>
     <p><a href='/'>Back home</a></p>
-  </body>
-</html>
