--- a/MusicOrganizer/Views/Home/Index.cshtml
+++ b/MusicOrganizer/Views/Home/Index.cshtml
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Music Organizer</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  </head>
-  <body>
+@{
+    Layout = "_Layout";
+  }
     <h1>Music Organizer</h1>
     <h3><a href='/artists'>View artists</a></h3>
     <h3><a href='/artists/new'>Add a new artist</a></h3>
-    <p><img src='~/img/kanye.jpg'></p>
-  </body>
-</html>
+    <p><img src='~/img/kanyeImg.jpg'></p>
+    
