--- a/MusicOrganizer/Views/Records/Index.cshtml
+++ b/MusicOrganizer/Views/Records/Index.cshtml
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My To-Do List!</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  </head>
-  <body>
+  @{
+    Layout = "_Layout";
+  }
     @using MusicOrganizer.Models;
 
     <h1>To Do List</h1>
@@ -25,5 +20,3 @@
     <form action="/records/delete" method="post">
       <button type="submit" name="button">Clear All records</button>
     </form>
-  </body>
-</html>
