add delete buttons
Co-authored by:  Samuel Majerus <ladolego@gmail.com>
Co-authored-by: Tiberius Lockett <tlockett680@gmail.com>

--- a/MusicOrganizer/Views/Records/New.cshtml
+++ b/MusicOrganizer/Views/Records/New.cshtml
@@ -5,5 +5,5 @@
       <input id="artistId" name="artistId" type="hidden" value="@Model.Id">
       <label for="recordTitle">Record Title:</label>
       <input id="recordTitle" name="recordTitle" type="text">
-      <button type='submit'>Add Record</button>
+      <button type='submit' class="btn btn-light">Add Record</button>
     </form>
