--- a/MusicOrganizer/Views/Records/Show.cshtml
+++ b/MusicOrganizer/Views/Records/Show.cshtml
@@ -9,3 +9,4 @@
     <a href='/artists/@Model["artist"].Id/records/new'>Add another record</a>
     <br>
     <a href='/artists'>View all artists</a>
+    <p><img src='~/img/handsomeKanye.jpg'></p>
