--- a/MusicOrganizer/Views/Artists/Index.cshtml
+++ b/MusicOrganizer/Views/Artists/Index.cshtml
@@ -16,5 +16,9 @@
         <h3><a href='/artists/@artist.Id'>@artist.ArtistName</a></h3>
       }
     }
-
+    <p><a href='/artists/new'>Add a new Artist.</a>
+      <form action="/artists/delete" method="post">
+      <button type="submit" name="button" class="btn btn-light">Clear All Artists</button>
+    </form>
     <p><a href='/'>Back home</a></p>
+
