--- a/MusicOrganizer/Views/Home/Index.cshtml
+++ b/MusicOrganizer/Views/Home/Index.cshtml
@@ -5,4 +5,7 @@
     <h3><a href='/artists'>View artists</a></h3>
     <h3><a href='/artists/new'>Add a new artist</a></h3>
     <p><img src='~/img/kanyeImg.jpg'></p>
+    <p><img src='~/img/albumCovers.jpeg'></p>
+    
+    
     
