--- a/MusicOrganizer/Views/Records/Index.cshtml
+++ b/MusicOrganizer/Views/Records/Index.cshtml
@@ -3,7 +3,7 @@
   }
     @using MusicOrganizer.Models;
 
-    <h1>To Do List</h1>
+    <h1>Record List</h1>
     @if (Model.Count == 0)
     {
       <p>There are no records in the list.</p>
@@ -15,8 +15,10 @@
       }
     </ul>
 
-    <a href="/records/new">Add a new record.</a>
-
-    <form action="/records/delete" method="post">
-      <button type="submit" name="button">Clear All records</button>
+    <a href="/artists/{artistId}/records/new">Add a new record.</a>
+    <form action="/artists/{artistId}/records/delete" method="post">
+      <button type="submit" name="button" class="btn btn-light">Clear All records</button>
     </form>
+    <p><a href='/artists'>Return to artist list</a></p>
+    <p><a href='/'>Back home</a></p>
+    
