--- a/MusicOrganizer/wwwroot/css/styles.css
+++ b/MusicOrganizer/wwwroot/css/styles.css
@@ -1,3 +1,14 @@
 body { 
-  background-color: blue ;
+  background-color: rgb(255, 193, 252) ;
+  text-align: center;
+}
+
+div#footer {
+  position:fixed;
+  bottom:0px;
+  left:0px;
+  width:100%;
+  color:#CCC;
+  background:#333;
+  padding:8px;
 }
