--- a/MusicOrganizer/wwwroot/css/styles.css
+++ b/MusicOrganizer/wwwroot/css/styles.css
@@ -8,7 +8,7 @@ div#footer {
   bottom:0px;
   left:0px;
   width:100%;
-  color:#CCC;
-  background:#333;
+  color:rgb(255, 255, 255);
+  background:rgb(194, 88, 185);
   padding:8px;
 }
